# climate-vbd-uncertainty-paper

./: .gitignore  Dockerfile  Gemfile  README.md  Snakefile  _config.yml  environment.yml  index.html  pyproject.toml  ruff.toml
.github/workflows/: main.yml
app_code/: __init__.py  run_cluster_app.sh  web_app.py
climepi/: __init__.py  _core.py  _ensemble_stats.py  _geocoding.py  _version.py  _xcdat.py  utils.py
climepi/app/: __init__.py  __main__.py  _app_classes_methods.py  _app_construction.py  _dask_port_address.py  cluster.py
climepi/climdata/: __init__.py  _base.py  _cesm.py  _data_getter_class.py  _examples.py  _isimip.py
climepi/epimod/: __init__.py  _examples.py  _model_classes.py
climepi/testing/: __init__.py  fixtures.py
data/: README.md  weather_2020.nc
data/isimip_cities_daily/: isimip_daily_2030_to_2100_Cape_Town_ssp126_canesm5_0.nc  isimip_daily_2030_to_2100_Cape_Town_ssp126_cnrm-cm6-1_0.nc  isimip_daily_2030_to_2100_Cape_Town_ssp126_cnrm-esm2-1_0.nc  isimip_daily_2030_to_2100_Cape_Town_ssp126_ec-earth3_0.nc  isimip_daily_2030_to_2100_Cape_Town_ssp126_gfdl-esm4_0.nc  isimip_daily_2030_to_2100_Cape_Town_ssp126_ipsl-cm6a-lr_0.nc  isimip_daily_2030_to_2100_Cape_Town_ssp126_miroc6_0.nc  isimip_daily_2030_to_2100_Cape_Town_ssp126_mpi-esm1-2-hr_0.nc  isimip_daily_2030_to_2100_Cape_Town_ssp126_mri-esm2-0_0.nc  isimip_daily_2030_to_2100_Cape_Town_ssp126_ukesm1-0-ll_0.nc  isimip_daily_2030_to_2100_Cape_Town_ssp370_canesm5_0.nc  isimip_daily_2030_to_2100_Cape_Town_ssp370_cnrm-cm6-1_0.nc  isimip_daily_2030_to_2100_Cape_Town_ssp370_cnrm-esm2-1_0.nc  isimip_daily_2030_to_2100_Cape_Town_ssp370_ec-earth3_0.nc  isimip_daily_2030_to_2100_Cape_Town_ssp370_gfdl-esm4_0.nc  isimip_daily_2030_to_2100_Cape_Town_ssp370_ipsl-cm6a-lr_0.nc  isimip_daily_2030_to_2100_Cape_Town_ssp370_miroc6_0.nc  isimip_daily_2030_to_2100_Cape_Town_ssp370_mpi-esm1-2-hr_0.nc  isimip_daily_2030_to_2100_Cape_Town_ssp370_mri-esm2-0_0.nc  isimip_daily_2030_to_2100_Cape_Town_ssp370_ukesm1-0-ll_0.nc  isimip_daily_2030_to_2100_Cape_Town_ssp585_canesm5_0.nc  isimip_daily_2030_to_2100_Cape_Town_ssp585_cnrm-cm6-1_0.nc  isimip_daily_2030_to_2100_Cape_Town_ssp585_cnrm-esm2-1_0.nc  isimip_daily_2030_to_2100_Cape_Town_ssp585_ec-earth3_0.nc  isimip_daily_2030_to_2100_Cape_Town_ssp585_gfdl-esm4_0.nc  isimip_daily_2030_to_2100_Cape_Town_ssp585_ipsl-cm6a-lr_0.nc  isimip_daily_2030_to_2100_Cape_Town_ssp585_miroc6_0.nc  isimip_daily_2030_to_2100_Cape_Town_ssp585_mpi-esm1-2-hr_0.nc  isimip_daily_2030_to_2100_Cape_Town_ssp585_mri-esm2-0_0.nc  isimip_daily_2030_to_2100_Cape_Town_ssp585_ukesm1-0-ll_0.nc  isimip_daily_2030_to_2100_Istanbul_ssp126_canesm5_0.nc  isimip_daily_2030_to_2100_Istanbul_ssp126_cnrm-cm6-1_0.nc  isimip_daily_2030_to_2100_Istanbul_ssp126_cnrm-esm2-1_0.nc  isimip_daily_2030_to_2100_Istanbul_ssp126_ec-earth3_0.nc  isimip_daily_2030_to_2100_Istanbul_ssp126_gfdl-esm4_0.nc  (+115 more)
literature_search/: literature_search.xlsx
paper_code/: example_numbers.ipynb  figure_export.py  main.ipynb  opts.py  sensitivity_niche.ipynb  sensitivity_splines.ipynb  summary_location_species.ipynb  summary_plot.py  weather_data.ipynb
src/: figure_export.py  main.ipynb  opts.py  sensitivity_location_model.ipynb  sensitivity_location_model_summary.ipynb  sensitivity_niche.ipynb  summary_location_species.ipynb  summary_plot.py  utils.py  variance_plots.ipynb  weather_data.ipynb
(+6 files in other folders)
